--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Not_Decided</string>
+    <string-array name="place">
+        <item>Airport</item>
+        <item>Railwaystation</item>
+        <item>Others</item>
+    </string-array>
 </resources>
