--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
-    <string name="app_name">Not_Decided</string>
+    <string name="app_name">CabShare</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string-array name="place">
         <item>Airport</item>
-        <item>Railwaystation</item>
+        <item>Railway Station</item>
         <item>Others</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
+
